# exact

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  PLAN.md  README.md  run_examm_lyu2021.sh
cli/: examm_task.py
cnn/: exact.cxx
common/: process_arguments.cxx
docs/: common.md  examm_presentation.md  executables.md  island_evolution.md  lamarckian_weights.md  rl_tools_snn.md  rnn_genome.md  rnn_nodes.md  time_series.md  train_vanilla_exact.md  training_and_backpropagation.md  use_snn_implementations.md  weights.md
exact_rl_tools/: CMakeLists.txt  rl_environment.cxx  rl_environment.hxx  rl_evaluator.cxx  rl_evaluator.hxx  rl_local_search.cxx  rl_local_search.hxx  rl_tools_pendulum_sac_baseline.cxx  test_rl_tools_environments.cxx
examm/: examm.cxx  examm.hxx  island.cxx  island.hxx  island_speciation_strategy.cxx  island_speciation_strategy.hxx  neat_speciation_strategy.cxx  neat_speciation_strategy.hxx  speciation_strategy.hxx
mpi/: CMakeLists.txt  examm_mpi.cxx
multithreaded/: CMakeLists.txt  cartpole_env.cxx  cartpole_env.hxx  snn_rl_mt.cxx
rnn/: CMakeLists.txt  generate_nn.cxx  generate_nn.hxx  genome_property.cxx  genome_property.hxx  lif_node.cxx  lif_node.hxx  multiply_node.cxx  rnn.cxx  rnn.hxx  rnn_genome.cxx  rnn_genome.hxx  rnn_node_interface.cxx  rnn_node_interface.hxx
rnn_examples/: CMakeLists.txt  README_ANALYSIS.md  analyze_experimental_setups.cxx  analyze_global_bests.cxx  finetune_new.cpp  finetune_rnn.cxx  jordan_rnn.cxx  train_rnn.cxx
rnn_tests/: CMakeLists.txt  test_lif_gradients.cxx  test_lif_node.cxx
scripts/: session_log.py
(+49 files in other folders)
